# ConfigReader

./: .gitignore  .vimrc  CMakeLists.txt  README.md
include/: conf.h  defines.h  file.h  functions.h  mem.h
src/: conf.c  conf.cpp  file.cpp  functions.c  functions.cpp  main.c  mem.c
test/: main.c
